# GPU-my-list-of-bugs

./: LICENSE  README.md  SIN_HASH.md
bug_AMD_128_bytes_push_const/: CMakeLists.txt  debug.h  main.c
bug_AMD_128_bytes_push_const/shaders/: build_shaders.sh
bug_AMD_128_bytes_push_const/shaders/spv/: main.frag.spv
bug_AMD_128_bytes_push_const/shaders/src/: main.frag  main_image.glsl
bug_push_const_leak_to_texture/: CMakeLists.txt  main.c
bug_push_const_leak_to_texture/shaders/: build_shaders.sh
bug_push_const_leak_to_texture/shaders/spv/: buf.frag.spv  main.frag.spv
bug_push_const_leak_to_texture/shaders/src/: buf.frag  buf0.glsl  main.frag  main_image.glsl
os_utils/: os_win_utils.h  wayland_utils.h  xcb_x11_utils.h
use_validation_layer/: VK_validation.cmd  vk_layer_settings.txt
vk_utils/: vk_error_print.c  vk_render_helper.c  vk_render_helper.h  vk_struct.h  vk_utils.c  vk_utils.h
